k8s/pedido/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickfood-backend-pedido-service
  namespace: quickfood
  labels:
    app: quickfood-backend-pedido
spec:
  selector:
    app: quickfood-backend-pedido
  ports:
    - protocol: TCP
      port: 83
      targetPort: 83
  type: ClusterIP
