k8s/pedido/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickfood-backend-pedido-ingress
  namespace: quickfood
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pedido.quickfood.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quickfood-backend-pedido-service
            port:
              number: 83
